{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 687,
  "lineage": "66a26ca6-985b-5895-84a9-d13d7bb9be2b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-094125af156557ca2",
            "arn": "arn:aws:ec2:us-west-2:649094558971:instance/i-0a8fa29b087e6657c",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-access-profile",
            "id": "i-0a8fa29b087e6657c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "andriy.aws",
            "launch_template": [
              {
                "id": "lt-06ee47dc05304b702",
                "name": "my_ec2_template_private",
                "version": "$Latest"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-08fbd5a953c154238"
              }
            ],
            "primary_network_interface_id": "eni-08fbd5a953c154238",
            "private_dns": "ip-10-0-3-249.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e206b51fdc7c534",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04da758c7a50139dd",
            "tags": {
              "Name": "ec2-instance-from-template-private",
              "Template": "private"
            },
            "tags_all": {
              "Name": "ec2-instance-from-template-private",
              "Template": "private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ccc1c9f4fd2204bd"
            ]
          },
          "dependencies": [
            "aws_network_interface.private-network-interface",
            "data.template_file.private_init_script",
            "module.ec2_template_private.aws_launch_template.my_ec2_template",
            "module.instance_profile.aws_iam_instance_profile.ec2-access-profile",
            "module.instance_profile.aws_iam_role.ec2-access-role",
            "module.persistance.aws_db_instance.postgresql_rds_test",
            "module.persistance.aws_db_subnet_group.rds_group_default",
            "module.persistance.aws_dynamodb_table.dynamodb-table",
            "module.persistance.aws_security_group.my_security_group_rds",
            "module.sg_private.aws_security_group.https-ssh-security-group",
            "module.vpc.aws_subnet.private-sb-1",
            "module.vpc.aws_subnet.private-sb-2",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "private-network-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:network-interface/eni-08fbd5a953c154238",
            "id": "eni-08fbd5a953c154238",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:37:22:fa:f1:57",
            "owner_id": "649094558971",
            "private_ip": "10.0.3.249",
            "private_ip_list": [
              "10.0.3.249"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.3.249"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ccc1c9f4fd2204bd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04da758c7a50139dd",
            "tags": {
              "Name": "private-subnet-inteface"
            },
            "tags_all": {
              "Name": "private-subnet-inteface"
            }
          },
          "dependencies": [
            "module.sg_private.aws_security_group.https-ssh-security-group",
            "module.vpc.aws_subnet.private-sb-1",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-week4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:649094558971:loadbalancer/app/lb/b35b4c53403d100c",
            "arn_suffix": "app/lb/b35b4c53403d100c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-1429139077.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:649094558971:loadbalancer/app/lb/b35b4c53403d100c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0eed0fa6601690a07"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a2558c8a1a136f16"
              },
              {
                "subnet_id": "subnet-0b319b78554bf05de"
              }
            ],
            "subnets": [
              "subnet-0a2558c8a1a136f16",
              "subnet-0b319b78554bf05de"
            ],
            "vpc_id": "vpc-0b124b7cd3a5b3c93",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.load-balancer.aws_security_group.my_sc_http_lb",
            "module.vpc.aws_subnet.public-sb-1",
            "module.vpc.aws_subnet.public-sb-2",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:649094558971:listener/app/lb/b35b4c53403d100c/eaf6e524e8b0cf67",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:649094558971:targetgroup/tg/89fd5a6e08af9d49",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:649094558971:listener/app/lb/b35b4c53403d100c/eaf6e524e8b0cf67",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:649094558971:loadbalancer/app/lb/b35b4c53403d100c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load-balancer.aws_lb.lb-week4",
            "module.load-balancer.aws_lb_target_group.lb-target-group-week4",
            "module.load-balancer.aws_security_group.my_sc_http_lb",
            "module.vpc.aws_subnet.public-sb-1",
            "module.vpc.aws_subnet.public-sb-2",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target-group-week4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:649094558971:targetgroup/tg/89fd5a6e08af9d49",
            "arn_suffix": "targetgroup/tg/89fd5a6e08af9d49",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:649094558971:targetgroup/tg/89fd5a6e08af9d49",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b124b7cd3a5b3c93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sc_http_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:security-group/sg-0eed0fa6601690a07",
            "description": "Enable HTTP for LB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eed0fa6601690a07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my_sc_http_lb",
            "name_prefix": "",
            "owner_id": "649094558971",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b124b7cd3a5b3c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.persistance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:security-group/sg-0c624f525c4927783",
            "description": "Enable Postgres access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c624f525c4927783",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "Postgresql",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "my_security_group_rds",
            "name_prefix": "",
            "owner_id": "649094558971",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b124b7cd3a5b3c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_private",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https-ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:security-group/sg-0ccc1c9f4fd2204bd",
            "description": "Enable HTTP access via port 80 + SSH access for sg_private",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccc1c9f4fd2204bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_sg_private",
            "name_prefix": "",
            "owner_id": "649094558971",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b124b7cd3a5b3c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_public",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https-ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:security-group/sg-01e7a7be16f4615ca",
            "description": "Enable HTTP access via port 80 + SSH access for sg_public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e7a7be16f4615ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_sg_public",
            "name_prefix": "",
            "owner_id": "649094558971",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b124b7cd3a5b3c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f95da1ca59f7dea0",
            "arn": "arn:aws:ec2:us-west-2:649094558971:instance/i-02070e16f7431e3f3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02070e16f7431e3f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "andriy.aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0462490f1ac3a3bb3"
              }
            ],
            "primary_network_interface_id": "eni-0462490f1ac3a3bb3",
            "private_dns": "ip-10-0-1-29.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "public_ip": "35.163.226.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-03bd21c6bbd7b39a7",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0a2558c8a1a136f16",
            "tags": {
              "Name": "NAT"
            },
            "tags_all": {
              "Name": "NAT"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0628b776acc69a506"
            ]
          },
          "dependencies": [
            "module.vpc.aws_network_interface.nat-network-interface",
            "module.vpc.aws_security_group.nat-security-group",
            "module.vpc.aws_subnet.public-sb-1",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:internet-gateway/igw-090b7e7caa56eb04a",
            "id": "igw-090b7e7caa56eb04a",
            "owner_id": "649094558971",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-0b124b7cd3a5b3c93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nat-network-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:network-interface/eni-0462490f1ac3a3bb3",
            "id": "eni-0462490f1ac3a3bb3",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:89:f0:2d:f1:d5",
            "owner_id": "649094558971",
            "private_ip": "10.0.1.29",
            "private_ip_list": [
              "10.0.1.29"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.29"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0628b776acc69a506"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0a2558c8a1a136f16",
            "tags": {
              "Name": "NAT"
            },
            "tags_all": {
              "Name": "NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.nat-security-group",
            "module.vpc.aws_subnet.public-sb-1",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:route-table/rtb-0a4b4c7b09f6e2ce2",
            "id": "rtb-0a4b4c7b09f6e2ce2",
            "owner_id": "649094558971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-02070e16f7431e3f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-router-table"
            },
            "tags_all": {
              "Name": "private-router-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b124b7cd3a5b3c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_instance.public-nat",
            "module.vpc.aws_network_interface.nat-network-interface",
            "module.vpc.aws_security_group.nat-security-group",
            "module.vpc.aws_subnet.public-sb-1",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:route-table/rtb-0b6e558a153750c63",
            "id": "rtb-0b6e558a153750c63",
            "owner_id": "649094558971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090b7e7caa56eb04a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b124b7cd3a5b3c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my-igw",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-to-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fabd70e0f2a1e96",
            "route_table_id": "rtb-0a4b4c7b09f6e2ce2",
            "subnet_id": "subnet-04da758c7a50139dd"
          },
          "dependencies": [
            "module.vpc.aws_instance.public-nat",
            "module.vpc.aws_network_interface.nat-network-interface",
            "module.vpc.aws_route_table.private-route",
            "module.vpc.aws_security_group.nat-security-group",
            "module.vpc.aws_subnet.private-sb-1",
            "module.vpc.aws_subnet.public-sb-1",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-to-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03eca6b7b3a7be058",
            "route_table_id": "rtb-0a4b4c7b09f6e2ce2",
            "subnet_id": "subnet-0cd1cacf398b30662"
          },
          "dependencies": [
            "module.vpc.aws_instance.public-nat",
            "module.vpc.aws_network_interface.nat-network-interface",
            "module.vpc.aws_route_table.private-route",
            "module.vpc.aws_security_group.nat-security-group",
            "module.vpc.aws_subnet.private-sb-2",
            "module.vpc.aws_subnet.public-sb-1",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-to-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004e33622dd0500c3",
            "route_table_id": "rtb-0b6e558a153750c63",
            "subnet_id": "subnet-0a2558c8a1a136f16"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my-igw",
            "module.vpc.aws_route_table.public-route",
            "module.vpc.aws_subnet.public-sb-1",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-to-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2799e00c99570d4",
            "route_table_id": "rtb-0b6e558a153750c63",
            "subnet_id": "subnet-0b319b78554bf05de"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my-igw",
            "module.vpc.aws_route_table.public-route",
            "module.vpc.aws_subnet.public-sb-2",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:security-group/sg-0628b776acc69a506",
            "description": "Enable HTTP access via port 80 + SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0628b776acc69a506",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nat-security-group-name",
            "name_prefix": "",
            "owner_id": "649094558971",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b124b7cd3a5b3c93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sb-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:subnet/subnet-04da758c7a50139dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04da758c7a50139dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "649094558971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sb"
            },
            "tags_all": {
              "Name": "private-sb"
            },
            "vpc_id": "vpc-0b124b7cd3a5b3c93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sb-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:subnet/subnet-0cd1cacf398b30662",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd1cacf398b30662",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "649094558971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sb"
            },
            "tags_all": {
              "Name": "private-sb"
            },
            "vpc_id": "vpc-0b124b7cd3a5b3c93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sb-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:subnet/subnet-0a2558c8a1a136f16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2558c8a1a136f16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "649094558971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sb"
            },
            "tags_all": {
              "Name": "public-sb"
            },
            "vpc_id": "vpc-0b124b7cd3a5b3c93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sb-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:subnet/subnet-0b319b78554bf05de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b319b78554bf05de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "649094558971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sb"
            },
            "tags_all": {
              "Name": "public-sb"
            },
            "vpc_id": "vpc-0b124b7cd3a5b3c93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:649094558971:vpc/vpc-0b124b7cd3a5b3c93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06fd251d309de8a8e",
            "default_route_table_id": "rtb-0a1ef66659de280b8",
            "default_security_group_id": "sg-01224dc82ccc4c65f",
            "dhcp_options_id": "dopt-0b6baaed953b6e0c4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b124b7cd3a5b3c93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a1ef66659de280b8",
            "owner_id": "649094558971",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}